SERVER-58356 Cannot kill the dataSize operation